--- a/public/index.html
+++ b/public/index.html
@@ -31,35 +31,32 @@
 
     <!-- META -->
     <title>My DAO</title>
-    <meta
-      name="description"
-      content="Check out my DAO built with @_buildspace & @thirdweb_!"
-    />
+    <meta name="description" content="The TealDAO to build a teal world!" />
 
     <!-- Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://buildspace.so/" />
-    <meta property="og:title" content="My DAO" />
+    <meta property="og:url" content="https://tealdao.placelibre.org" />
+    <meta property="og:title" content="TealDAO" />
     <meta
       property="og:description"
-      content="Checkout my DAO built with _buildspace & thirdweb_!"
+      content="The TealDAO to build a teal world!"
     />
     <meta
       property="og:image"
-      content="https://ipfs.thirdweb.com/ipfs/QmP45dfW7n6oM8DKH13nzdQrbukVC3EBQfo87N2bHczMV9"
+      content="https://tealdao.placelibre.org/logo_02.png"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://buildspace.so/" />
-    <meta property="twitter:title" content="My DAO" />
+    <meta property="twitter:url" content="https://tealdao.placelibre.org" />
+    <meta property="twitter:title" content="TealDAO" />
     <meta
       property="twitter:description"
-      content="Check out my DAO built with @_buildspace & @thirdweb_!"
+      content="The TealDAO to build a teal world!"
     />
     <meta
       property="twitter:image"
-      content="https://ipfs.thirdweb.com/ipfs/QmP45dfW7n6oM8DKH13nzdQrbukVC3EBQfo87N2bHczMV9"
+      content="https://tealdao.placelibre.org/logo_02.png"
     />
   </head>
   <body>
